--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <script>window.jsonData=<%- jsonData %></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" />
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 </head>
 <body class="container">
   <section id="content"><%- content %></section>
